@@ -1,3 +1,8 @@
+2021-02-03  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/shell/magic/Magic.java:
+	Added static getCellMagicCommand(String) method.
+
 2021-02-02  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/server/Message.java:
